# circlebet

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PRD.md  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_nullable_password_hash.py  003_add_market_image_url.py  004_add_circle_icon_url.py  005_add_is_admin_to_users.py  006_bets_and_notifications.py  007_unique_display_name.py
app/: config.py  exceptions.py  main.py
app/auth/: dependencies.py  jwt.py
app/models/: __init__.py  bet.py  bet_entry.py  bet_option.py  circle.py  circle_member.py  holding.py  market.py  notification.py  trade.py  user.py
app/routes/: auth.py  bets.py  circles.py  leaderboard.py  markets.py  notifications.py  portfolio.py  trades.py  uploads.py
app/schemas/: auth.py  bet.py  circle.py  leaderboard.py  market.py  notification.py  portfolio.py  trade.py
app/services/: auth.py  bet.py  circle.py  leaderboard.py  lmsr.py  market.py  notification.py  portfolio.py  trade.py
app/tasks/: market_closer.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/hooks/: use-auth.ts  use-bets.ts  use-circles.ts  use-leaderboard.ts  use-markets.ts  use-notifications.ts  use-portfolio.ts  use-trades.ts
scripts/: seed_local_test_data.py
tests/: conftest.py  test_auth.py  test_circles.py  test_leaderboard.py  test_lmsr.py  test_markets.py  test_portfolio.py  test_trades.py
(+54 files in other folders)
